--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
     "outDir": "dist",
     "sourceMap": false,
-    "target": "es2016",
     "useDefineForClassFields": false,
     "module": "esnext",
     "moduleResolution": "node",
+    "declaration": true,
+    "skipLibCheck": true,
     "allowJs": true,
     "strict": true,
     "noUnusedLocals": true,
