--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@vue/repl": "^1.0.0",
     "file-saver": "^2.0.5",
     "jszip": "^3.6.0",
-    "vant": "^3.4.6",
     "vue": "3.2.31"
+  },
+  "peerDependencies": {
+    "vant": "^3.4.6"
   }
 }
