--- a/package.json
+++ b/package.json
@@ -1,17 +1,29 @@
 {
   "name": "sfc-playground-vant",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+  "version": "1.0.1",
+  "description": "Try Vant in the Playground. Currently only Vant 3+ is supported",
+  "homepage": "https://sfc-playground-vant.vercel.app/",
+  "bugs": "https://github.com/zhixiaoqiang/sfc-playground-vant/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zhixiaoqiang/sfc-playground-vant"
   },
-  "devDependencies": {
-    "@types/file-saver": "^2.0.5",
-    "@types/node": "^17.0.23",
-    "@vitejs/plugin-vue": "^2.2.4",
-    "execa": "^4.0.2",
-    "vite": "^2.7.1"
+  "author": {
+    "name": "zhixiaoqiang",
+    "email": "xdnazi1985@gmail.com",
+    "url": "https://zhixiaoqiang.github.io/zhixiaoqiang/"
+  },
+  "scripts": {
+    "build": "vite build",
+    "check:js": "eslint --ext .mjs,.ts,.js,.vue ./",
+    "check:markdownlint": "markdownlint-cli2 '**.md' '#node_modules'",
+    "check:sort-package-json": "sort-package-json --check",
+    "dev": "vite",
+    "lint": "zx scripts/lint.mjs",
+    "markdownlint-fix": "markdownlint-cli2-fix '**.md' '#node_modules'",
+    "prepare": "husky install",
+    "serve": "vite preview",
+    "sort-package-json": "sort-package-json"
   },
   "dependencies": {
     "@vue/repl": "^1.0.0",
@@ -19,7 +31,38 @@
     "jszip": "^3.6.0",
     "vue": "3.2.31"
   },
+  "devDependencies": {
+    "@changesets/cli": "^2.22.0",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@types/file-saver": "^2.0.5",
+    "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "@vitejs/plugin-vue": "^2.2.4",
+    "eslint": "^8.12.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-module-utils": "^2.7.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^8.5.0",
+    "execa": "^4.0.2",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.7",
+    "markdownlint-cli2": "^0.4.0",
+    "ora": "^6.1.0",
+    "prettier": "^2.6.2",
+    "sort-package-json": "^1.55.0",
+    "typescript": "^4.6.3",
+    "vite": "^2.7.1",
+    "vue-eslint-parser": "^8.3.0",
+    "zx": "^6.0.7"
+  },
   "peerDependencies": {
     "vant": "^3.4.6"
+  },
+  "renovate": {
+    "enabled": false
   }
 }
