--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "dist",
     "sourceMap": false,
     "useDefineForClassFields": false,
@@ -7,8 +8,11 @@
     "moduleResolution": "node",
     "declaration": true,
     "skipLibCheck": true,
+    "target": "ESNext",
     "allowJs": true,
     "strict": true,
+    "checkJs": true,
+    "noEmit": true,
     "noUnusedLocals": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
@@ -20,5 +24,9 @@
   },
   "include": [
     "global.d.ts",
-  ]
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ],
 }
