feat(scripts): add release-tag script

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jzone/sfc-playground-vant",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Try Vant in the Playground. Currently only Vant 3+ is supported",
   "keywords": [
     "vant",
@@ -27,6 +27,7 @@
     "lint": "zx scripts/lint.mjs",
     "markdownlint-fix": "markdownlint-cli2-fix '**.md' '#node_modules'",
     "prepare": "husky install",
+    "release-tag": "zx --experimental scripts/release-tag.mjs",
     "serve": "vite preview",
     "sort-package-json": "sort-package-json"
   },
