--- a/.github/workflows/changeset.yml
+++ b/.github/workflows/changeset.yml
@@ -26,17 +26,17 @@ jobs:
           node-version: '16'
           cache: 'pnpm'
      
-      - name: setup pnpm config
-        run: pnpm config set store-dir $PNPM_CACHE_FOLDER
-      - name: install dependencies
-        run: pnpm install
-      - name: create and publish versions
-        uses: changesets/action@master
-        with:
-          version: pnpm changeset version
-          commit: "chore: update versions"
-          title: "chore: update versions"
-          publish: pnpm changeset publish
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      # - name: setup pnpm config
+      #   run: pnpm config set store-dir $PNPM_CACHE_FOLDER
+      # - name: install dependencies
+      #   run: pnpm install
+      # - name: create and publish versions
+      #   uses: changesets/action@master
+      #   with:
+      #     version: pnpm changeset version
+      #     commit: "chore: update versions"
+      #     title: "chore: update versions"
+      #     publish: pnpm changeset publish
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+      #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
