--- a/src/download/template/package.json
+++ b/src/download/template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-vant-starter",
+  "name": "vant-starter",
   "version": "0.0.0",
   "scripts": {
     "build": "vite build",
@@ -7,6 +7,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@vant/popperjs": "1.1.0",
+    "@vant/touch-emulator": "1.3.2",
+    "@vant/use": "1.3.6",
     "vant": "^3.4.6",
     "vue": "^3.2.0"
   },
