--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "sort-package-json": "^1.55.0",
     "typescript": "^4.6.3",
     "vite": "^2.7.1",
+    "vite-plugin-style-import": "1.4.1",
     "vue-eslint-parser": "^8.3.0",
     "zx": "^6.0.7"
   },
