--- a/src/download/template/package.json
+++ b/src/download/template/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.4.0",
     "@vue/compiler-sfc": "^3.2.0",
-    "vite": "^2.4.4"
+    "vite": "^2.4.4",
+    "vite-plugin-style-import": "1.4.1"
   }
 }
