--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lint": "zx scripts/lint.mjs --all",
     "markdownlint-fix": "markdownlint-cli2-fix '**.md' '#node_modules'",
     "prepare": "husky install",
+    "preview": "vite preview",
     "release": "zx scripts/release.mjs --npmPublish",
     "serve": "vite preview",
     "sort-package-json": "sort-package-json"
