--- a/.github/workflows/deploy-sfc-playground.yaml
+++ b/.github/workflows/deploy-sfc-playground.yaml
@@ -25,7 +25,7 @@ jobs:
           cache: 'pnpm'
 
       - name: Install dependencies
-        run:  pnpm install
+        run:  pnpm install --no-frozen-lockfile
 
       - name: Build playground
         run: pnpm build
