--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,7 +33,7 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        run: pnpm install
+        run: pnpm install --no-frozen-lockfile
 
       - name: Run linters
         run: pnpm lint
