--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@vue/repl": "^1.3.0",
+    "fflate": "^0.7.3",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.0",
     "vue": "3.2.37"
