--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "types": "global.d.ts",
   "scripts": {
     "build": "wireit",
+    "check-fresh-deps": "wireit",
     "check:all": "wireit",
     "check:js": "wireit",
     "check:markdownlint": "wireit",
@@ -41,7 +42,7 @@
     "@vue/repl": "^1.3.0",
     "fflate": "^0.7.3",
     "file-saver": "^2.0.5",
-    "jszip": "^3.10.0",
+    "jszip": "^3.10.1",
     "vue": "3.2.37"
   },
   "devDependencies": {
@@ -49,30 +50,32 @@
     "@commitlint/cli": "17.0.3",
     "@commitlint/config-conventional": "17.0.3",
     "@types/file-saver": "2.0.5",
-    "@types/node": "17.0.23",
+    "@types/node": "18.6.5",
     "@typescript-eslint/eslint-plugin": "5.33.0",
     "@typescript-eslint/parser": "5.33.0",
-    "@vitejs/plugin-vue": "2.3.3",
+    "@vitejs/plugin-vue": "3.0.1",
+    "consola": "^2.15.3",
     "eslint": "8.21.0",
-    "eslint-config-standard": "16.0.3",
+    "eslint-config-standard": "17.0.0",
     "eslint-module-utils": "2.7.3",
     "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.0.0",
-    "eslint-plugin-vue": "8.7.1",
-    "execa": "4.1.0",
-    "husky": "7.0.4",
+    "eslint-plugin-vue": "9.3.0",
+    "execa": "6.1.0",
+    "husky": "8.0.1",
     "lint-staged": "13.0.3",
     "markdownlint-cli2": "0.5.0",
     "ora": "6.1.2",
     "prettier": "2.7.1",
     "sort-package-json": "1.57.0",
     "typescript": "4.7.4",
-    "vite": "2.9.14",
+    "vite": "3.0.4",
     "vite-plugin-style-import": "2.0.0",
-    "vue-eslint-parser": "8.3.0",
+    "vue-eslint-parser": "9.0.3",
     "wireit": "0.7.1",
-    "zx": "6.2.5"
+    "zx": "7.0.8"
   },
   "renovate": {
     "enabled": false
@@ -121,8 +124,11 @@
     "sort-package-json": {
       "command": "sort-package-json"
     },
-    "fresh-deps": {
+    "check-fresh-deps": {
       "command": "npx taze"
+    },
+    "fresh-deps": {
+      "command": "npx taze -w"
     }
   }
 }
