--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
   "include": [
     "global.d.ts",
     "src/**/*.ts",
-    "vite.config.ts"
+    "vite.config.mts"
   ],
   "exclude": [
     "node_modules",
